# OpenStay

./: README.MD
Frontend/: package-lock.json  package.json
Frontend/src/: App.vue
Frontend/src/assets/: base.css  main.css
Frontend/src/components/: ConfirmationModal.vue  ConnectWallet.vue  LeaveReviewModal.vue  Modal.vue  MyBookingsModal.vue
Frontend/src/data/: listings.ts
Frontend/src/router/: index.ts
Frontend/src/stores/: auth.ts  listings.ts  wallet.ts
Frontend/src/views/: DashboardView.vue  ListingDetailView.vue  LoginView.vue  RegistrationView.vue  ReservationView.vue
server/: .gitignore  package-lock.json  package.json
server/anchor/sol-bnb-escrow/: Anchor.toml  package-lock.json  wallet_user4.json
server/anchor/sol-bnb-escrow/Desktop/: wallet_user1.json  wallet_user2.json
server/anchor/sol-bnb-escrow/programs/sol-bnb-escrow/: Cargo.toml
server/anchor/sol-bnb-escrow/programs/sol-bnb-escrow/src/: error.rs  lib.rs
server/anchor/sol-bnb-escrow/programs/sol-bnb-escrow/src/instructions/: book_stay.rs  cancel_booking.rs  confim_checkout.rs  create_listing.rs  get_all_listings.rs  initialize_listings_registry.rs  mod.rs
server/anchor/sol-bnb-escrow/programs/sol-bnb-escrow/src/state/: booking.rs  escrow_valut.rs  listing.rs  listing_registry.rs  mod.rs
server/anchor/sol-bnb-escrow/tests/: sol-bnb-escrow.ts
server/api/: package-lock.json  package.json  test_db.ts  tsconfig.json
server/api/src/: Anchor.toml  app.ts  server.ts
server/api/testingScripts/: bookingFlow.ts  createListing.ts  fullFlowTesting.ts  getAllListings.ts
(+24 files in other folders)
